--- a/app.template.netwinform02/AppAdo02/app.template.netwinform02.csproj
+++ b/app.template.netwinform02/AppAdo02/app.template.netwinform02.csproj
@@ -48,8 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ProductoBll.cs" />
+    <Compile Include="Controller\ProyectoBll.cs" />
     <Compile Include="Database\AccesoDB.cs" />
+    <Compile Include="Entity\Proyecto.cs" />
     <Compile Include="Model\ProductoDao.cs" />
+    <Compile Include="Model\ProyectoDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Helper.cs" />
@@ -114,9 +117,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entity\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
