--- a/app.template.netwinform02/AppAdo02/App.config
+++ b/app.template.netwinform02/AppAdo02/App.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <connectionStrings>
-    <add name="Neptuno"
-         connectionString="server=.;database=Neptuno;integrated security=true"
-         providerName="System.Data.SqlClient"/>
+    <add name="Neptuno" connectionString="server=.;database=Neptuno;integrated security=true"
+      providerName="System.Data.SqlClient" />
+    <add name="CapaDatos.Properties.Settings.NeptunoConnectionString"
+      connectionString="Data Source=.;Initial Catalog=Neptuno;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
