--- a/app.template.netwinform02/AppAdo02/CapaDatos.csproj
+++ b/app.template.netwinform02/AppAdo02/CapaDatos.csproj
@@ -50,9 +50,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\DataSet.cs">
+      <DependentUpon>DataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Common\DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Database\AccesoDB.cs" />
     <Compile Include="Entity\EmpleadoTO.cs" />
     <Compile Include="Interfaz\ICrudDao.cs" />
+    <Compile Include="Model\ClientesBaseDAO.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Model\EmpleadoDAO.cs" />
     <Compile Include="Entity\Proyecto.cs" />
     <Compile Include="Model\ProyectoDAO.cs" />
@@ -68,6 +79,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Common\DataSet.xsc">
+      <DependentUpon>DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Common\DataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Common\DataSet.xss">
+      <DependentUpon>DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
